# successor-quanta

./: .gitignore  README.md  pyproject.toml  setup.sh
experiments/: train_successor.py
experiments/configs/: L2_D128_base10_rope.yaml  L2_D128_base20_rope.yaml  L2_D128_base2_learned.yaml  L2_D128_base2_rope.yaml  L2_D128_base2_rope_powerlaw.yaml  L2_D128_base2_rope_wd.yaml  L2_D128_base2_sinusoidal.yaml  L2_D128_base3_rope.yaml  L2_D256_base10_rope.yaml  L2_D256_base20_rope.yaml  L2_D256_base2_rope.yaml  L2_D512_base10_rope.yaml  L2_D512_base20_rope.yaml  L2_D512_base2_rope.yaml  L2_D512_base2_rope_v2.yaml  L4_D256_base2_rope.yaml  L4_D256_base2_rope_ce_k500.yaml  L4_D256_base2_rope_ce_powerlaw_k500.yaml  L4_D256_base2_rope_powerlaw_stablemax.yaml  L4_D256_base2_rope_stablemax.yaml  L4_D256_base2_rope_stablemax_k500.yaml  L4_D256_base2_rope_stablemax_powerlaw_k500.yaml  L4_D256_base2_rope_wd.yaml  L4_D256_base2_rope_wd_powerlaw_stablemax.yaml  L4_D256_base2_rope_wd_stablemax.yaml  L6_D128_base2_rope.yaml
scripts/: launch_cloud.sh  launch_cloud_sweep2.sh  plot_carry_dist.py  plot_curves.py  setup_instance.sh
src/: config.py  data.py  diagnostics.py  losses.py  model.py  train.py  utils.py
